feat: secure judge